clang/test/CodeGen/RISCV/csr-intrinsics/riscv-zicsr-invalid.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py
// RUN: %clang_cc1 -triple riscv32 -target-feature +zicsr %s -fsyntax-only -verify
// RUN: %clang_cc1 -triple riscv64 -target-feature +zicsr %s -fsyntax-only -verify
// RUN: %clang_cc1 -triple riscv32 %s -fsyntax-only -verify

#ifdef __riscv_zicsr
unsigned long non_const(unsigned long a) {
  return __builtin_riscv_csrr(a); // expected-error {{argument to '__builtin_riscv_csrr' must be a constant integer}}
}

unsigned long too_large() {
  return __builtin_riscv_csrr(33312); // expected-error {{argument value 33312 is outside the valid range [0, 4095]}}
}

void non_const_write(unsigned long d) {
  return __builtin_riscv_csrw(d, d); // expected-error {{argument to '__builtin_riscv_csrw' must be a constant integer}}
}
#else
unsigned long read(unsigned long a) {
  return __builtin_riscv_csrr(3); // expected-error {{builtin requires at least one of the following extensions: 'Zicsr'}}
}
void write(unsigned long d) {
  return __builtin_riscv_csrw(3, d); // expected-error {{builtin requires at least one of the following extensions: 'Zicsr'}}
}
#endif
